updated .gitignore to ignore cachegrind as well

--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,9 @@
 # Image files
 **.png
 
-# Callgrind profiling info
+# Callgrind and cachegrind profiling info
 **callgrind.out.*
+**cacherind.out.*
 
 # C port program
 render
